--- a/packages/ui/src/components/form/w-file/w-file.less
+++ b/packages/ui/src/components/form/w-file/w-file.less
@@ -1,4 +1,4 @@
-$image-size: 20rem;
+@image-size: 20rem;
 
 .file {
   display: flex;
@@ -7,8 +7,8 @@ $image-size: 20rem;
   width: min-content;
 
   &__image {
-    width: $image-size;
-    height: $image-size;
+    width: @image-size;
+    height: @image-size;
     border-radius: 5px;
     overflow: hidden;
   }
