--- a/packages/ui/src/components/form/w-input/w-input.less
+++ b/packages/ui/src/components/form/w-input/w-input.less
@@ -1,18 +1,16 @@
-@mixin focus {
+.focus {
   .input {
-    @include themed() {
-      outline: 2px solid red;
-      &__container--bordered {
-        &>.input__input,
-        &>.input__textarea {
-          border-color: t(brand-color);
-        }
+    outline: 2px solid red;
+    &__container--bordered {
+      &>.input__input,
+      &>.input__textarea {
+        border-color: var(--theme-brand-color);
       }
+    }
 
-      &__icon {
-        :deep([data-component=icon]) {
-          fill: t(brand-color);
-        }
+    &__icon {
+      :deep([data-component=icon]) {
+        fill: var(--theme-brand-color);
       }
     }
   }
@@ -20,7 +18,7 @@
 
 .input, .textarea {
   &:focus-within {
-    @include focus;
+    .focus();
   }
 }
 
@@ -35,13 +33,11 @@
     display: flex;
 
     &--bordered {
-      @include themed() {
-        &>.input__input,
-        &>.input__textarea {
-          background: t(background-color-alt);
-          border: 2px solid transparent;
-          transition: border-color .35s ease;
-        }
+      &>.input__input,
+      &>.input__textarea {
+        background: var(--theme-background-color-alt);
+        border: 2px solid transparent;
+        transition: border-color .35s ease;
       }
     }
 
@@ -56,14 +52,12 @@
     border: 0;
 
     &--normal, &--bold {
-      @include themed() {
-        color: t(foreground-color);
-        background: t(background-color);
-      }
+      color: var(--theme-foreground-color);
+      background: var(--theme-background-color);
     }
 
     &--normal {
-      padding: var(--default-input-padding);
+      padding: var(--theme-input-padding);
       border-radius: 4px;
     }
 
