--- a/packages/ui/src/components/w-badge/w-badge.less
+++ b/packages/ui/src/components/w-badge/w-badge.less
@@ -11,8 +11,6 @@
   height: 1.4rem;
   min-width: 1rem;
 
-  @include themed() {
-    background: t(brand-color);
-    color: white !important;
-  }
+  background: var(--theme-brand-color);
+  color: white !important;
 }
