--- a/packages/ui/src/components/w-picture/w-picture.less
+++ b/packages/ui/src/components/w-picture/w-picture.less
@@ -3,9 +3,7 @@
 
   &__image {
     &--bordered {
-      @include themed() {
-        border: 1px solid t(border-color);
-      }
+      border: 1px solid var(--theme-border-color);
     }
 
     &--expandable {
@@ -16,10 +14,8 @@
   &__background {
     width: 100%;
     height: 100%;
-    @include themed() {
-      &>* {
-        stroke: t(border-color);
-      }
+    &>* {
+      stroke: var(--theme-border-color);
     }
   }
 
