chore: version bump

--- a/packages/ui/src/components/form/w-select/w-select.less
+++ b/packages/ui/src/components/form/w-select/w-select.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: .4rem;
-  padding: var(--default-input-padding);
+  padding: var(--theme-input-padding);
 
   border: 2px solid transparent;
 
