--- a/packages/ui/src/components/w-context-menu/w-context-menu.less
+++ b/packages/ui/src/components/w-context-menu/w-context-menu.less
@@ -31,7 +31,7 @@
       }
     }
 
-    &:novar(--theme-:last-child) {
+    &:not(:last-child) {
       border-bottom: 1px solid var(--theme-border-color);
     }
   }
