--- a/packages/ui/src/views/dashboard/user/profile/profile.less
+++ b/packages/ui/src/views/dashboard/user/profile/profile.less
@@ -11,7 +11,7 @@
     overflow: hidden;
 
     &>* {
-      &:novar(--theme-:last-child) {
+      &:not(:last-child) {
         border-bottom: 1px solid var(--theme-border-color);
       }
 
