refactor(ui): remove duplicated code, optimize bundle size

--- a/packages/ui/src/components/w-badge/w-badge.less
+++ b/packages/ui/src/components/w-badge/w-badge.less
@@ -1,13 +1,13 @@
 .badge {
   display: grid;
   place-items: center;
-  padding: 0 .4rem;
+  padding: .1rem .6rem;
   box-sizing: content-box;
 
-  font-size: 8pt;
-  font-weight: 600;
+  font-size: 8.5pt;
+  font-weight: 500;
 
-  border-radius: 30px;
+  border-radius: 12px;
   height: 1.4rem;
   min-width: 1rem;
 
