--- a/packages/ui/src/components/w-card/w-card.less
+++ b/packages/ui/src/components/w-card/w-card.less
@@ -1,11 +1,36 @@
 .card {
+  position: relative;
   overflow: hidden;
   background: var(--theme-background-color-alt);
   border-radius: 20px;
 
+  &--inactive {
+    opacity: .6;
+  }
+
+  &--horizontal {
+    display: flex;
+
+    .card__picture {
+      width: 18rem;
+      height: 12rem;
+    }
+
+    .card__footer {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card__badge {
+      position: relative;
+      margin: 0;
+      margin-top: auto;
+    }
+  }
+
   &__picture {
     width: 100%;
-    height: 18rem;
+    height: 16rem;
     overflow: hidden;
 
     :deep(figure) {
@@ -15,12 +40,27 @@
 
   &__footer {
     width: 100%;
+    height: 100%;
     padding: 1rem;
 
+    background: #f4f4f4;
+  }
+
+  &__footer-upper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+  }
 
-    background: #f4f4f4;
+  &__badge {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: .8rem;
+
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    gap: .2rem;
   }
 }
