--- a/packages/ui/src/components/w-grid/w-grid.less
+++ b/packages/ui/src/components/w-grid/w-grid.less
@@ -2,16 +2,18 @@
   display: grid;
   gap: 1rem;
   
-  @media screen and (min-width: 600px) {
-    gap: 1.6rem;
-    grid-template-columns: repeat(2, 1fr);
-  }
+  &:not(&--list) {
+    @media screen and (min-width: 600px) {
+      gap: 1.6rem;
+      grid-template-columns: repeat(2, 1fr);
+    }
 
-  @media screen and (min-width: 1200px) {
-    grid-template-columns: repeat(3, 1fr);
-  }
+    @media screen and (min-width: 1200px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
 
-  @media screen and (min-width: 1400px) {
-    grid-template-columns: repeat(4, 1fr);
+    @media screen and (min-width: 1400px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 }
