feat(ui): improve theming

--- a/packages/ui/src/components/form/w-input/w-input.less
+++ b/packages/ui/src/components/form/w-input/w-input.less
@@ -58,13 +58,13 @@
 
     &--normal {
       padding: var(--theme-input-padding);
-      border-radius: 4px;
+      border-radius: var(--theme-medium-radius);
     }
 
     &--bold {
       padding: 1rem .8rem;
       font-size: 12pt;
-      border-radius: 8px;
+      border-radius: var(--theme-large-radius);
 
       &::placeholder {
         font-weight: 600;
