--- a/packages/ui/src/less/theme.less
+++ b/packages/ui/src/less/theme.less
@@ -13,6 +13,8 @@
   --theme-background-color-contrast: #f5f5f5;
   --theme-background-color-hover: #dddddd;
   --theme-background-color-opaque: #ffffffbb;
+  --theme-medium-radius: 4px;
+  --theme-large-radius: 8px;
   --theme-body-background: #fff;
   --theme-shadow-color: #ccc;
   --theme-clickable-color: #5090fa;
