--- a/packages/ui/src/components/w-button/w-button.less
+++ b/packages/ui/src/components/w-button/w-button.less
@@ -15,7 +15,7 @@
 
   box-sizing: content-box;
   text-align: center;
-  border-radius: 8px;
+  border-radius: var(--theme-large-radius);
   outline: none;
 
   color: var(--theme-foreground-color);
