--- a/packages/ui/src/components/w-table/w-table.less
+++ b/packages/ui/src/components/w-table/w-table.less
@@ -7,7 +7,7 @@
 .table {
   width: 100%;
   border-spacing: 0;
-  border-radius: 8px;
+  border-radius: var(--theme-large-radius);
 
   @media screen and (min-width: 600px) {
     overflow: hidden;
@@ -50,7 +50,7 @@
       flex-direction: column;
       height: auto;
 
-      border-radius: 10px;
+      border-radius: var(--theme-large-radius);
       overflow: hidden;
 
       &:not(:last-child) {
@@ -128,7 +128,7 @@
   &__picture {
     height: @picture-size;
     width: @picture-size;
-    border-radius: 10px;
+    border-radius: var(--theme-large-radius);
     overflow: hidden;
 
     border: 1px solid var(--theme-border-color);
