feat(ui): w-search styling

--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-item/w-search-item.less
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-item/w-search-item.less
@@ -1,7 +1,8 @@
 .item {
   display: flex;
   align-items: center;
-  padding: .8rem;
+  padding: .6rem;
+  min-height: 2.8rem;
 
   color: var(--theme-foreground-color);
 
