--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
@@ -1,7 +1,7 @@
 .container {
-  border-radius: 8px;
-  overflow: hidden;
   background: var(--theme-background-color-alt);
+  border-radius: var(--theme-large-radius);
+  overflow: hidden;
 
   &__content {
     max-height: 20rem;
