--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
@@ -1,6 +1,6 @@
 .container {
   background: var(--theme-background-color-alt);
-  border-radius: var(--theme-large-radius);
+  border-radius: var(--theme-radius-large);
   overflow: hidden;
 
   &__content {
@@ -12,7 +12,7 @@
 
   &__footer {
     padding: .8rem;
-    font-size: .75rem;
+    font-size: .8rem;
     color: #555;
   }
 }
