--- a/packages/ui/src/components/form/w-switch/w-switch.less
+++ b/packages/ui/src/components/form/w-switch/w-switch.less
@@ -20,7 +20,7 @@
   width: 3rem;
 
   &--active {
-    background: var(--theme-brand-color);
+    background: var(--theme-brand-color-shade-3);
   }
 
   &--readOnly {
