--- a/packages/ui/src/components/w-accordion/w-accordion.less
+++ b/packages/ui/src/components/w-accordion/w-accordion.less
@@ -1,6 +1,6 @@
 .accordion {
   border: 1px solid var(--theme-border-color);
-  border-radius: var(--theme-large-radius);
+  border-radius: var(--theme-radius-large);
   border-width: 1px 1px 0 1px;
   overflow: hidden;
 
