--- a/packages/ui/src/components/w-badge/w-badge.less
+++ b/packages/ui/src/components/w-badge/w-badge.less
@@ -11,6 +11,6 @@
   height: 1.4rem;
   min-width: 1rem;
 
-  background: var(--theme-brand-color);
+  background: var(--theme-brand-color-shade-3);
   color: white !important;
 }
