--- a/packages/ui/src/components/w-card/w-card.less
+++ b/packages/ui/src/components/w-card/w-card.less
@@ -2,7 +2,7 @@
   position: relative;
   overflow: hidden;
   background: var(--theme-background-color-alt);
-  border-radius: 20px;
+  border-radius: var(--theme-radius-extra-large);
 
   &--inactive {
     opacity: .6;
