--- a/packages/ui/src/components/form/w-search/w-search.less
+++ b/packages/ui/src/components/form/w-search/w-search.less
@@ -2,9 +2,16 @@
   display: flex;
   flex-direction: column;
 
+  &__panel {
+    display: flex;
+    flex-direction: column;
+    max-width: 35rem;
+  }
+
   &__input {
     display: flex;
     gap: .8rem;
     margin-bottom: .8rem;
+    align-items: stretch;
   }
 }
