--- a/packages/ui/src/components/form/w-select/w-select.less
+++ b/packages/ui/src/components/form/w-select/w-select.less
@@ -4,11 +4,9 @@
   gap: .4rem;
   padding: var(--theme-input-padding);
 
-  border: 2px solid transparent;
-
   background: var(--theme-background-color-alt);
   color: var(--theme-foreground-color);
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   transition: border-color .35s ease;
 
   &:focus-within {
@@ -18,6 +16,7 @@
   &__select {
     width: 100%;
     min-width: 5rem;
+    font-family: unset;
 
     border-radius: 4px;
     line-height: 1.5rem;
