--- a/packages/ui/src/components/w-box/w-box.less
+++ b/packages/ui/src/components/w-box/w-box.less
@@ -61,7 +61,7 @@
       max-width: 90vw;
       min-width: 90vw;
       max-height: 80vh;
-      border-radius: 14px;
+      border-radius: var(--theme-radius-large);
 
       @media screen and (min-width: 800px) {
         min-width: 36rem;
