refactor(ui): remove uneeded slots

--- a/packages/ui/src/components/w-button/w-button.less
+++ b/packages/ui/src/components/w-button/w-button.less
@@ -57,6 +57,7 @@
 
   &--brand {
     background: var(--theme-brand-color);
+    color: var(--theme-foreground-color-contrast);
   }
 
   &--small {
