fix: several minor fixes

--- a/packages/ui/themes/default.less
+++ b/packages/ui/themes/default.less
@@ -8,10 +8,10 @@ main {
   --theme-foreground-color-alt: #000;
   --theme-foreground-color-contrast: #fff;
   --theme-background-color: #fff;
+  --theme-background-color-shade-2: #eee;
+  --theme-background-color-shade-3: #ddd;
   --theme-background-color-alt: #f9f9f9;
   --theme-background-color-contrast: #f5f5f5;
-  --theme-background-color-hover: #dddddd;
-  --theme-background-color-opaque: #ffffffbb;
   --theme-radius-medium: 0;
   --theme-radius-large: 4px;
   --theme-radius-extra-large: 16px;
