--- a/packages/ui/themes/default.less
+++ b/packages/ui/themes/default.less
@@ -7,10 +7,10 @@ main {
   --theme-foreground-color: #555;
   --theme-foreground-color-alt: #000;
   --theme-foreground-color-contrast: #fff;
-  --theme-background-color: #f9f9f9;
-  --theme-background-color-shade-2: #eee;
-  --theme-background-color-shade-3: #ddd;
-  --theme-background-color-shade-4: #fcfcfc;
+  --theme-background-color: #fff;
+  --theme-background-color-shade-2: #f9f9f9;
+  --theme-background-color-shade-3: #eee;
+  --theme-background-color-shade-4: #ddd;
   --theme-background-color-alt: #f9f9f9;
   --theme-background-color-contrast: #f5f5f5;
   --theme-radius-medium: 0;
