feat: reimplement visual feedback of validation errors

--- a/packages/ui/src/components/dashboard/w-crud-topbar/w-crud-topbar.less
+++ b/packages/ui/src/components/dashboard/w-crud-topbar/w-crud-topbar.less
@@ -1,12 +1,13 @@
 .topbar {
-  display: flex;
-  flex: 1;
-  gap: 1rem;
-
   &__preset {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: .4rem;
+    width: 100%;
+
+    @media screen and (min-width: 600px) {
+      justify-content: flex-start;
+    }
   }
 }
