--- a/packages/ui/src/components/w-context-menu/w-context-menu.less
+++ b/packages/ui/src/components/w-context-menu/w-context-menu.less
@@ -15,12 +15,17 @@
     font-weight: 400;
 
     :deep(>*) {
+      display: flex;
+      align-items: center;
+      gap: .4rem;
+
       width: 100%;
       height: 100%;
       padding: 1.6rem !important;
       font-size: 11pt;
 
       @media screen and (min-width: 600px) {
+        justify-content: flex-start;
         padding: 1rem !important;
       }
     }
