--- a/packages/ui/src/components/w-button/w-button.less
+++ b/packages/ui/src/components/w-button/w-button.less
@@ -66,12 +66,12 @@
   }
 
   &--medium {
-    padding: .8rem;
+    padding: var(--theme-input-padding);
     font-size: 10pt;
   }
 
   &--large {
-    padding: .9rem 2.4rem;
+    padding: var(--theme-input-padding-large);
     font-size: 11pt;
   }
 
