--- a/packages/ui/themes/default.less
+++ b/packages/ui/themes/default.less
@@ -1,5 +1,6 @@
 main {
   --theme-input-padding: .8rem;
+  --theme-input-padding-large: .9rem 2.4rem;
   --theme-brand-color: #f46036;
   --theme-brand-color-shade-2: #f03f0d;
   --theme-brand-color-shade-3: #d4380c;
