feat(ui): theming system

--- a/packages/ui/src/components/dashboard/w-prompt/w-prompt.less
+++ b/packages/ui/src/components/dashboard/w-prompt/w-prompt.less
@@ -5,6 +5,8 @@
     display: grid;
     height: 4rem;
     width: 100%;
+
+    background: var(--theme-background-color-shade-2);
   }
 
   &__action {
@@ -16,11 +18,11 @@
     }
 
     &--normal {
-      color: #5090fa;
+      color: var(--theme-blueish);
     }
 
     &--danger {
-      color: red;
+      color: var(--theme-redish);
     }
 
   }
