--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-container/w-search-container.less
@@ -1,5 +1,5 @@
 .container {
-  background: var(--theme-background-color-alt);
+  background: var(--theme-background-color-shade-3);
   border-radius: var(--theme-radius-large);
   overflow: hidden;
 
@@ -13,6 +13,6 @@
   &__footer {
     padding: .8rem;
     font-size: .8rem;
-    color: #555;
+    color: var(--theme-foreground-color);
   }
 }
