--- a/packages/ui/src/components/form/w-search/_internals/components/w-search-item/w-search-item.less
+++ b/packages/ui/src/components/form/w-search/_internals/components/w-search-item/w-search-item.less
@@ -7,7 +7,8 @@
   color: var(--theme-foreground-color);
 
   &--selected {
-    background: #e8f4f8;
+    background: var(--theme-brand-color-shade-1);
+    color: var(--theme-brand-color-contrast);
   }
 
   &__values {
