--- a/packages/ui/src/components/w-button/w-button.less
+++ b/packages/ui/src/components/w-button/w-button.less
@@ -42,17 +42,17 @@
     font-weight: 300;
 
     &:hover {
-      background: var(--theme-button-background-color-shade-3);
+      background: var(--theme-background-color-shade-4);
     }
   }
 
   &--primary {
     background: var(--theme-brand-color-shade-2);
-    border-color: var(--theme-brand-color);
+    border-color: var(--theme-brand-color-shade-2);
 
     :deep(*) {
-      color: var(--theme-background-color);
-      fill: var(--theme-background-color);
+      color: var(--theme-brand-color-contrast);
+      fill: var(--theme-brand-color-contrast);
     }
   }
 
