--- a/packages/ui/src/components/w-card/w-card.less
+++ b/packages/ui/src/components/w-card/w-card.less
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   overflow: hidden;
-  background: var(--theme-background-color-alt);
+  background: var(--theme-background-color-shade-2);
   border-radius: var(--theme-radius-extra-large);
 
   &--inactive {
@@ -43,7 +43,8 @@
     height: 100%;
     padding: 1rem;
 
-    background: #f4f4f4;
+    background: var(--theme-background-color-shade-3);
+    color: var(--theme-foreground-color);
   }
 
   &__footer-upper {
