--- a/packages/ui/src/components/w-context-menu/w-context-menu.less
+++ b/packages/ui/src/components/w-context-menu/w-context-menu.less
@@ -13,6 +13,7 @@
     display: flex;
     width: 100%;
     font-weight: 400;
+    color: var(--theme-foreground-color);
 
     :deep(>*) {
       display: flex;
@@ -32,7 +33,7 @@
 
     &--reactive {
       &:hover {
-        background: var(--theme-background-color-shade-3);
+        background: var(--theme-background-color-shade-4);
       }
     }
 
