--- a/packages/ui/src/components/w-picture/w-picture.less
+++ b/packages/ui/src/components/w-picture/w-picture.less
@@ -22,4 +22,9 @@
   &__meta {
     font-size: 11pt;
   }
+
+  & > figcaption {
+    margin-top: .4rem;
+    color: var(--theme-foreground-color);
+  }
 }
