--- a/packages/ui/src/less/utilities.less
+++ b/packages/ui/src/less/utilities.less
@@ -8,7 +8,7 @@
 }
 
 .w-surface-alt {
-  background: var(--theme-background-color-alt);
+  background: var(--theme-background-color-shade-2);
   color: var(--theme-foreground-color);
 }
 
@@ -18,4 +18,14 @@
 
 .w-branded-text {
   color: var(--theme-brand-color);
+}
+
+.w-redish {
+  color: var(--theme-redish);
+  fill: var(--theme-redish);
+}
+
+.w-blueish {
+  color: var(--theme-blueish);
+  fill: var(--theme-blueish);
 }
