--- a/packages/ui/src/views/dashboard/user/profile/profile.less
+++ b/packages/ui/src/views/dashboard/user/profile/profile.less
@@ -1,11 +1,16 @@
 .profile {
+  &__user-name {
+    font-size: 18pt;
+    font-weight: 600;
+  }
+
   &__menu {
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
     padding: 0;
 
-    background: var(--theme-background-color-alt);
+    background: var(--theme-background-color-shade-2);
     border: 1px solid var(--theme-border-color);
     border-radius: 10px;
     overflow: hidden;
