--- a/packages/ui/src/components/w-menu/w-menu.less
+++ b/packages/ui/src/components/w-menu/w-menu.less
@@ -1,10 +1,11 @@
 .menu {
   padding: 0;
-  border-radius: 10px;
+  border-radius: var(--theme-radius-large);
   align-self: center;
   min-width: 90vw;
 
-  background: var(--theme-background-color-alt);
+  color: var(--theme-foreground-color);
+  background: var(--theme-background-color-shade-2);
   border: 1px solid var(--theme-border-color);
 
   @media screen and (min-width: 600px) {
@@ -12,7 +13,9 @@
   }
 
   &__entry {
-    padding: 1.2rem;
+    font-size: 11pt;
+    padding: 1rem;
+
     &:not(:last-child) {
       border-bottom: 1px solid var(--theme-border-color);
     }
