--- a/packages/ui/src/less/theme.less
+++ b/packages/ui/src/less/theme.less
@@ -1,45 +1,8 @@
-.loading {
-  div {
-    border: 4px solid var(--theme-brand-color) !important;
-  }
+.theme-defaults() {
+  --theme-input-padding: .8rem;
+  --theme-input-height: 20px;
+  --theme-input-padding-large: .9rem 2.4rem;
+  --theme-radius-medium: 0;
+  --theme-radius-large: 4px;
+  --theme-radius-extra-large: 16px;
 }
-
-@keyframes lds-ripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 0;
-  }
-  5% {
-    opacity: 1;
-  }
-  100% {
-    top: 0;
-    left: 0;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
-}
-
-.loading {
-  position: relative;
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-
-  div {
-    position: absolute;
-    border: 4px solid #fff;
-    opacity: 1;
-    border-radius: 50%;
-    animation: lds-ripple 1s cubic-bezier(0, .2, .8, 1) infinite;
-  }
-
-  div:nth-child(2) {
-    animation-delay: -.5s;
-  }
-}
-
