--- a/packages/ui/themes/dark.less
+++ b/packages/ui/themes/dark.less
@@ -1,22 +1,20 @@
-main.main--dark {
-  --theme-input-padding: .8rem;
-  --theme-brand-color: #003fb9;
-  --theme-border-color: #666;
-  --theme-button-background-color: #0284c7;
-  --theme-button-background-color-alt: #ddddddaa;
-  --theme-button-background-color-hover: #dddddd;
-  --theme-button-border-color: transparent;
-  --theme-foreground-color: #555;
-  --theme-foreground-color-alt: #000;
-  --theme-background-color: #50505b;
-  --theme-background-color-alt: #50508b;
-  --theme-background-color-contrast: #f5f5f5;
-  --theme-background-color-hover: #dddddd;
-  --theme-background-color-opaque: #ffffffbb;
-  --theme-radius-medium: 4px;
-  --theme-radius-large: 8px;
-  --theme-body-background: #fff;
-  --theme-shadow-color: #ccc;
-  --theme-clickable-color: #5090fa;
-}
+@import '../dist/less/theme.less';
 
+.dark-theme(@brand-color, @background-color) {
+  .theme-defaults();
+  --theme-brand-color: @brand-color;
+  --theme-brand-color-shade-1: lighten(@brand-color, 12%);
+  --theme-brand-color-shade-2: darken(@brand-color, 10%);
+  --theme-brand-color-shade-3: darken(@brand-color, 15%);
+  --theme-brand-color-contrast: lighten(@brand-color, 100%);
+  --theme-foreground-color: lighten(@background-color, 95%);
+  --theme-background-color: @background-color;
+  --theme-background-color-shade-2: lighten(@background-color, 20%);
+  --theme-background-color-shade-3: lighten(@background-color, 22%);
+  --theme-background-color-shade-4: lighten(@background-color, 25%);
+  --theme-background-color-shade-5: lighten(@background-color, 30%);
+  --theme-body-background: @background-color;
+  --theme-border-color: lighten(@background-color, 25%);
+  --theme-redish: lighten(mix(red, @brand-color, 95%), 40%);
+  --theme-blueish: lighten(mix(blue, @brand-color, 95%), 40%);
+}
