fix(ui): minor fixes in theming system

--- a/packages/ui/src/components/form/w-select/w-select.less
+++ b/packages/ui/src/components/form/w-select/w-select.less
@@ -27,7 +27,7 @@
     background: transparent;
     color: var(--theme-foreground-color);
 
-    option {
+    :deep(option) {
       background: var(--theme-background-color-shade-3);
     }
   }
