--- a/packages/ui/src/components/w-accordion/w-accordion.less
+++ b/packages/ui/src/components/w-accordion/w-accordion.less
@@ -1,4 +1,5 @@
 .accordion {
+  color: var(--theme-foreground-color);
   background: var(--theme-background-color-shade-4);
   border-radius: var(--theme-radius-large);
   overflow: hidden;
