--- a/packages/ui/themes/dark.less
+++ b/packages/ui/themes/dark.less
@@ -13,6 +13,7 @@
   --theme-background-color-shade-3: lighten(@background-color, 14%);
   --theme-background-color-shade-4: lighten(@background-color, 16%);
   --theme-background-color-shade-5: lighten(@background-color, 20%);
+  --theme-shadow-color: lighten(@background-color, 60%);
   --theme-body-background: @background-color;
   --theme-border-color: lighten(@background-color, 25%);
   --theme-redish: lighten(mix(red, @brand-color, 95%), 40%);
