--- a/packages/ui/themes/light.less
+++ b/packages/ui/themes/light.less
@@ -13,6 +13,7 @@
   --theme-background-color-shade-3: darken(@background-color, 2%);
   --theme-background-color-shade-4: darken(@background-color, 4%);
   --theme-background-color-shade-5: darken(@background-color, 6%);
+  --theme-shadow-color: darken(@background-color, 12%);
   --theme-body-background: @background-color;
   --theme-border-color: darken(@background-color, 8%);
   --theme-redish: lighten(mix(red, @brand-color, 95%), 10%);
