fix(ui): fix icon sizing

--- a/packages/ui/src/components/aeria-icon/aeria-icon.less
+++ b/packages/ui/src/components/aeria-icon/aeria-icon.less
@@ -28,6 +28,10 @@
     column-gap: .2rem;
   }
 
+  &--standalone {
+    --icon-size: 18px;
+  }
+
   &__icon {
     display: grid;
     place-items: center;
