--- a/packages/ui/src/components/aeria-accordion/aeria-accordion.less
+++ b/packages/ui/src/components/aeria-accordion/aeria-accordion.less
@@ -15,7 +15,9 @@
     padding: 1rem;
   }
 
-  &__content {
-    padding: 1rem;
+  &--padded {
+    &__content {
+      padding: 1rem;
+    }
   }
 }
