--- a/packages/ui/src/components/aeria-icon/aeria-icon.less
+++ b/packages/ui/src/components/aeria-icon/aeria-icon.less
@@ -15,11 +15,11 @@
     border-radius: 5px;
 
     &:hover {
-      background: var(--theme-background-color);
+      opacity: .8;
     }
 
     &:active {
-      background: #ccc;
+      opacity: .6;
     }
   }
 
