--- a/packages/ui/src/components/dashboard/aeria-toast/aeria-toast.less
+++ b/packages/ui/src/components/dashboard/aeria-toast/aeria-toast.less
@@ -4,23 +4,41 @@
 }
 
 .toast {
-  padding: .4rem 2rem;
+  width: 90vw;
+
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
   user-select: none;
 
-  display: grid;
-  place-items: center;
   border-radius: 5px;
-
   z-index: 70;
-  animation: blink .35s forwards;
-  animation-delay: 3s;
+  animation: blink .5s forwards;
+  animation-delay: 2s;
   animation-play-state: paused;
 
   color: var(--theme-foreground-color);
   background: var(--theme-background-color);
   border: 1px solid var(--theme-border-color);
 
+  box-shadow: 0 3px 3px var(--theme-shadow-color);
+
+  @media screen and (min-width: 768px) {
+    width: 20rem;
+  }
+
   &--animate {
     animation-play-state: running;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: .6rem;
+  }
+
+  &__time {
+    font-size: 10pt;
+    opacity: .8;
   }
 }
