--- a/packages/ui/src/components/form/aeria-select/aeria-select.less
+++ b/packages/ui/src/components/form/aeria-select/aeria-select.less
@@ -4,20 +4,22 @@
   display: flex;
   align-items: center;
   gap: .4rem;
-  padding: var(--theme-input-padding);
 
   background: var(--background-color);
   border: 1px solid transparent;
-  transition: border-color .35s ease;
+  transition: border-color .15s ease;
 
-  &:focus-within {
-    border-color: var(--theme-brand-color);
+  &--outline {
+    &:focus-within {
+      border-color: var(--theme-brand-color);
+    }
   }
 
   &__select {
     width: 100%;
     min-width: 5rem;
     font-family: unset;
+    padding: var(--theme-input-padding);
 
     border-radius: 4px;
     line-height: 1.5rem;
@@ -31,6 +33,20 @@
 
     :deep(option) {
       background: var(--background-color);
+      height: 100%;
+    }
+
+    &--multiple {
+      padding: 0;
+
+      :deep(option) {
+        padding: var(--theme-input-padding);
+
+        &[data-selected="true"] {
+          background: var(--theme-brand-color);
+          color: var(--theme-brand-color-contrast);
+        }
+      }
     }
   }
 }
