--- a/packages/ui/themes/dark.less
+++ b/packages/ui/themes/dark.less
@@ -6,7 +6,7 @@
   --theme-brand-color-shade-1: mix(green, lighten(@brand-color, 12%), 30%);
   --theme-brand-color-shade-2: darken(@brand-color, 10%);
   --theme-brand-color-shade-3: darken(@brand-color, 15%);
-  --theme-brand-color-contrast: lighten(@brand-color, 100%);
+  --theme-brand-color-contrast: contrast(@brand-color);
   --theme-foreground-color: lighten(@background-color, 95%);
   --theme-background-color: @background-color;
   --theme-background-color-shade-2: lighten(@background-color, 13%);
